# gandalf

./: .gitignore  Gandalf.rc  Gandalf.vcproj  Gandalf1.rc  Gandalf_vs8.vcproj  Gandalf_vs9.vcproj  Makefile.in  building_win32_qmake.txt  config.h.in  config.macosx  config_msvc6.h  configure  configure-mo64.release  configure.in  gandalf.debug.pro  gandalf.pri  gandalf.pro  gandalf.release.pro  image.h  make.inc  preprocess.c  vision.h
TestFramework/: Makefile.in  cUnit.c  cUnit.h  path_builder.c
aclocal/: acx_blas.m4  acx_lapack.m4
common/: Makefile.in  array.c  array_noc.c  bit_array.c  compare.c  compare.h  file_io.c  gan_err.c  gan_err.h  gan_err_trace.c  i18n.c  i18n.h  memory_stack.c  misc_defs.c  misc_defs.h  misc_error.c  numerics.c  numerics.h
doc/: FAQ.html  conventions.html  gandalf.css  index.html
examples/: README  copy_file.c  image.c  invimage.c  linalg.c  subimage.c
image/: Makefile.in  image_bgr_double.c  image_bgr_short.c  image_bgr_ushort.c  image_bgra_double.c  image_bgra_uchar.c  image_bit.c  image_channel.c  image_channel.h  image_colour_noc.c  image_colour_noc.h  image_common_noc.c  image_composite.c  image_defs.c  image_defs.h  image_defs.h.orig  image_display.c  image_display_test.c  image_extract.c  image_extract.h  image_flip.c  image_gl_double.c  image_gl_int.c  image_gl_short.c  image_gl_uint10.c  image_gl_ushort.c  image_gla_double.c  image_gla_int.c  image_gla_short.c  image_gla_uint.c  image_gla_ushort.c  image_grey_noc.c  image_grey_noc.h  image_invert.c  image_pyramid.c  image_rgb_double.c  image_rgb_int.c  image_rgb_uchar.c  image_rgb_ushort.c  image_rgba_uint.c  (+17 more)
linalg/: 2vecf_noc.h.orig  2vectorf.c  2x2ltmat_noc.c  2x2mat_noc.c  2x2matf_noc.c  2x2matrix.c  2x2matrix_eigsym.c  2x2matrix_norm.c  2x2matrixf.c  2x2matrixf_eigsym.c  2x2symmatf_noc.c  2x3matrix_norm.c  2x3matrixf.c  2x4matrix.c  (+48 more)
trunk/gandalf/: Gandalf1.rc  Gandalf2.rc  Gandalf_vs8.vcproj  Gandalf_vs9.vcproj  Makefile.in  aclocal.m4  common.h  config  config.irix  config.sunos  config_macosx.h  config_msvc7.h  config_msvc9.h  configure  configure-mo-debug  configure-mo-release  configure-mo64.debug  configure.in  gandalf.pri  gandalf.pro  resource.h
trunk/gandalf/TestFramework/: Gandalf_TestSuite.dsp  cUnit.c  path_builder.h
trunk/gandalf/TestInput/: brussels.pgm
trunk/gandalf/TestOutput/: DontRemove
trunk/gandalf/common/: allocate.c  common_test.c  comp_noc.c  endian_io.c  file_io.c  file_io.h  gan_err.c  gan_err.h  gan_err_trace.c  gan_err_trace.h  i18n.c  i18n.h  linked_list.c  list_test.c  memory_stack.c  memory_stack.h  misc_defs.c  numerics.h
trunk/gandalf/doc/: conventions.html
trunk/gandalf/doc/images/: tutorial.fig
trunk/gandalf/doc/tutorial/: Makefile  active.bib  camera.fig  camera.ps  common.tex  fixed.tex  gauss_mix.fig  gauss_mix.ps  general.tex  hyper.fig  image.tex  intersect.fig  intro.tex  linalg.tex  local.fig  project.fig  project.ps  subdiv4.fig  subdiv4.ps  testing.tex
trunk/gandalf/examples/: Makefile.in  copy_file.c  image.c  subimage.c
trunk/gandalf/gandalf.pbproj/: project.pbxproj
trunk/gandalf/image/: Makefile.in  bitmap_test.c  image_bgr_float.c  image_bgr_int.c  image_bgr_uchar.c  image_bgr_uint.c  image_bgra_float.c  image_bgra_int.c  image_bgra_short.c  image_bgra_uint.c  image_bgra_ushort.c  image_bit.h  image_channel.c  image_common_noc.c  image_compare.c  image_convert.c  image_defs.c  image_defs.h  image_display_test.c  image_extract.c  image_gl_float.c  image_gl_uchar.c  image_gl_uint.c  image_gl_uint12.c  image_gla_float.c  image_gla_uchar.c  image_grey_noc.c  image_invert.c  image_pointer.c  image_rgb_float.c  image_rgb_short.c  image_rgb_uint.c  image_rgba_double.c  image_rgba_float.c  image_rgba_int.c  image_rgba_short.c  image_rgba_uchar.c  image_rgba_uint12.c  image_rgbx_uint10.c  image_rgbx_uint8.c  (+15 more)
trunk/gandalf/image/io/: cineon_io.c  dpx_io.c  dpx_io.h  image_io.c  image_io.h  jpeg_io.c  jpeg_io.h  movie.c  movie.h  pbm_io.c  pbm_io.h  pgm_io.c  pgm_io.h  png_io.c  png_io.h  ppm_io.c  ppm_io.h  sgi_io.c  sgi_io.h  targa_io.c  targa_io.h  tiff_io.c  tiff_io.h
trunk/gandalf/linalg/: 2vecf_noc.h  2vector.c  2vector_norm.c  2x2ltmatf_noc.c  2x2symmat_noc.c  2x3matrix.c  2x4matrix_norm.c  2x4matrixf.c  3vector_norm.c  3vectorf.c  3x3matf_noc.c  3x3matrix.c  3x3matrix_eigsym.c  3x3matrix_norm.c  3x3matrixf_eigsym.c  3x3matrixf_svd.c  3x3symmat_noc.c  3x4matrix_norm.c  3x4matrixf.c  4x4mat_noc.c  4x4matrix.c  4x4matrix_svd.c  4x4matrixf_eigsym.c  Makefile.in  mat_diagonal.c  mat_gen.c  mat_lq.c  mat_lq.h  mat_qr.c  mat_qr.h  mat_scaledI.c  mat_scaledI.h  mat_square.c  mat_symmetric.c  mat_triangular.c  matf_diagonal.c  matf_qr.c  matf_qr.h  matf_scaledI.c  matf_square.c  (+16 more)
trunk/gandalf/linalg/cblas/: dcopy.c  ddot.c  dgemv.c  dger.c  dnrm2.c  dspr.c  dspr2.c  dswap.c  dtpsv.c  dtrmv.c  dtrsm.c  idamax.c  scopy.c  sger.c  snrm2.c  sspr.c  sspr2.c  stpmv.c  strmv.c  strsm.c
trunk/gandalf/linalg/clapack/: dgelq2.c  dgeqr2.c  dgesv.c  dgetrf.c  dgetri.c  dlae2.c  dlamch.c  dlapy2.c  dlarfg.c  dlartg.c  dlasrt.c  dlaswp.c  dorg2l.c  dorgl2.c  dpptri.c  dsteqr.c  dsterf.c  ilaenv.c  sgesv.c  sgetf2.c  sgetri.c  slae2.c  slaev2.c  slarf.c  slarfg.c  slartg.c  slascl.c  slaset.c  slasrt.c  slassq.c  sopgtr.c  sorg2l.c  sorg2r.c  spptri.c  ssptrd.c  ssterf.c  stptri.c
trunk/gandalf/linalg/matrix/: qrbdv.c
trunk/gandalf/vision/: camera.h  camera_cubic_Bspline_inv.c  camera_equidistant.c  camera_equidistant.h  camera_radial_dist3.c  camera_sine_law.c  camera_stereographic.c  cameraf.c  cameraf.h  cameraf_cubic_Bspline.c  cameraf_cubic_Bspline_inv.c  cameraf_equidistant.c  cameraf_linear.c  cameraf_radial_dist3.c  cameraf_stereographic.c  cameraf_xy_dist4.c  canny_edge.c  convolve1D.c  convolve2D.c  convolve2D.h  convolve2D_test.c  corner_disp.c  edge_disp.c  edge_feature.c  essential.c  harris_corner.c  homog34_fit.c  hough_transform_test.c  lev_marq.c  line_disp.c  local_feature.h  mask1D.c  mask2D.h  modified_fht2D.c  segment_strings.c  threshold.c  vision_test.c
(+152 files in other folders)
