dnl Process this file with autoconf to produce a configure script.
AC_INIT(common/misc_defs.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
dnl AC_PROG_LIBTOOL

dnl ------------------------------------------
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE

dnl Checks endian-ness
AC_C_BIGENDIAN

dnl Checks for header files.
AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h malloc.h unistd.h)

if test "x$GCC" = xyes; then
   CFLAGS="$CFLAGS -Wall"
   LDFLAGS="$LDFLAGS -L/usr/local/lib $X_LIBS"
fi

# Disable PNG.
AC_ARG_WITH(png,
	      [  --without-png           disable PNG support],
	      [with_png=$withval],
	      [with_png='yes'])

# Disable TIFF.
AC_ARG_WITH(tiff,
	      [  --without-tiff          disable TIFF support],
	      [with_tiff=$withval],
	      [with_tiff='yes'])

# Disable JPEG.
AC_ARG_WITH(jpeg,
	      [  --without-jpeg          disable JPEG support],
	      [with_jpeg=$withval],
	      [with_jpeg='yes'])

# Disable LAPACK.
AC_ARG_WITH(lapack,
	      [  --without-lapack        disable LAPACK support],
	      [with_lapack=$withval],
	      [with_lapack='yes'])

# Disable OpenGL.
AC_ARG_WITH(opengl,
	      [  --without-opengl          disable OpenGL support],
	      [with_opengl=$withval],
	      [with_opengl='yes'])

# Disable GLUT.
AC_ARG_WITH(glut,
	      [  --without-glut          disable GLUT support],
	      [with_glut=$withval],
	      [with_glut='yes'])

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

#
# Check for PNG
#
have_png='no'
PNG_LIBS=''
if test "$with_png" != 'no'
then
    dnl Replace `main' with a function in -lpng:
    AC_CHECK_LIB(png, main, AC_DEFINE(HAVE_PNG) PNG_LIBS="-lpng -lz" have_png=yes, have_png=no, -lz)
fi

#
# Check for TIFF
#
have_tiff='no'
TIFF_LIBS=''
if test "$with_tiff" != 'no'
then
    dnl Replace `main' with a function in -ltiff:
    AC_CHECK_LIB(tiff, main, AC_DEFINE(HAVE_TIFF) TIFF_LIB="-ltiff" have_tiff=yes, have_tiff=no,)
fi

#
# Check for JPEG
#
have_jpeg='no'
JPEG_LIBS=''
if test "$with_jpeg" != 'no'
then
    dnl Replace `main' with a function in -ljpeg:
    AC_CHECK_LIB(jpeg, main, AC_DEFINE(HAVE_JPEG) JPEG_LIB="-ljpeg" have_jpeg=yes, have_jpeg=no,)
fi

#
# Check for LAPACK
#
have_lapack='no'
LAPACK_LIBS=''
if test "$with_lapack" != 'no'
then
    dnl Replace `main' with a function in -llapack:
    AC_CHECK_LIB(lapack, main, AC_DEFINE(HAVE_LAPACK) LAPACK_LIBS="-llapack -lblas -lf2c"
	   	 have_lapack=yes, have_lapack=no, -lblas -lf2c -lm)
fi

if test "$with_lapack" != 'no'
then
    dnl Replace `main' with a function in -lscs (for SGI):
    AC_CHECK_LIB(scs, main, AC_DEFINE(HAVE_SCSL) LAPACK_LIBS="-lscs -lblas"
	         have_scs=yes, have_scs=no, -lblas -lm)
fi

dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)

dnl Checks for libraries.
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)

#
# Check for PNG
#
have_png='no'
PNG_LIBS=''
if test "$with_png" != 'no'
then
    dnl Replace `main' with a function in -lpng:
    AC_CHECK_LIB(png, main, AC_DEFINE(HAVE_PNG) PNG_LIBS="-lpng -lz" have_png=yes, have_png=no, -lz)
fi

#
# Check for TIFF
#
have_tiff='no'
TIFF_LIBS=''
if test "$with_tiff" != 'no'
then
    dnl Replace `main' with a function in -ltiff:
    AC_CHECK_LIB(tiff, main, AC_DEFINE(HAVE_TIFF) TIFF_LIB="-ltiff" have_tiff=yes, have_tiff=no,)
fi

#
# Check for JPEG
#
have_jpeg='no'
JPEG_LIBS=''
if test "$with_jpeg" != 'no'
then
    dnl Replace `main' with a function in -ljpeg:
    AC_CHECK_LIB(jpeg, main, AC_DEFINE(HAVE_JPEG) JPEG_LIB="-ljpeg" have_jpeg=yes, have_jpeg=no,)
fi

#
# Check for LAPACK
#
have_lapack='no'
LAPACK_LIBS=''
if test "$with_lapack" != 'no'
then
    dnl Replace `main' with a function in -llapack:
    AC_CHECK_LIB(lapack, main, AC_DEFINE(HAVE_LAPACK) LAPACK_LIBS="-llapack -lblas -lf2c"
	   	 have_lapack=yes, have_lapack=no, -lblas -lf2c -lm)
fi

if test "$with_lapack" != 'no'
then
    dnl Replace `main' with a function in -lscs (for SGI):
    AC_CHECK_LIB(scs, main, AC_DEFINE(HAVE_SCSL) LAPACK_LIBS="-lscs -lblas"
	         have_scs=yes, have_scs=no, -lblas -lm)
fi

dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)

#
# Check for OpenGL
#
have_opengl='no'
OPENGL_LIBS=''
if test "$with_opengl" != 'no'
then
    AC_CHECK_LIB(GLU, main, AC_DEFINE(HAVE_OPENGL) OPENGL_LIBS="-lGLU -lGL -lXmu -lXi -lX11 -lpthread"
	         have_opengl=yes, have_opengl=no, -lGL -lXmu -lXi -lX11 -lpthread -lm)
fi

#
# Check for GLUT
#LIBXML_INCLUDE
have_glut='no'
GLUT_LIBS=''
if test "$with_glut" != 'no'
then
    AC_CHECK_LIB(glut, main, AC_DEFINE(HAVE_GLUT) GLUT_LIBS="-lglut"
	         have_glut=yes, have_glut=no, -lGLU -lGL -lXmu -lXi -lX11 -lpthread -lm)
fi

#
# Check for OpenGL extensions
#
have_glext='no'
AC_CHECK_LIB(GL, glXGetProcAddressARB, AC_DEFINE(HAVE_OPENGL_EXT)
	     have_glext=yes, have_glext=no, -lXmu -lXi -lX11 -lpthread -lm)


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Check sizes of various simple types
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(long long long long)
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(long double)

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(memcpy memmove random mkdir strchr strdup strstr strtod strtol powf sqrtf fabsf)

dnl Substitute variables
AC_SUBST(LAPACK_LIBS)
AC_SUBST(PNG_LIBS)
AC_SUBST(TIFF_LIB)
AC_SUBST(JPEG_LIB)
AC_SUBST(OPENGL_LIBS)
AC_SUBST(GLUT_LIBS)

dnl header file
AC_CONFIG_HEADER(config.h)

AC_OUTPUT(
Makefile
common/Makefile
linalg/Makefile
linalg/matrix/Makefile
linalg/cblas/Makefile
linalg/clapack/Makefile
image/Makefile
image/io/Makefile
vision/Makefile
TestFramework/Makefile
examples/Makefile
)
